--- a/Animations/JumpingDots/styles/JumpingDots.css
+++ b/Animations/JumpingDots/styles/JumpingDots.css
@@ -10,9 +10,9 @@
   border-radius:50%;
   background-color:lightsalmon;
   animation-name: bounce;
-  animation-duration: 1s;
+  animation-duration: 2s;
   top:0px;
-  animation-timing-function: linear;
+  animation-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
   animation-delay: 1s;
   animation-iteration-count: infinite;
   position: absolute;
@@ -22,9 +22,10 @@
     top:0px;
   }
   50% {
-    top:70px;
+    top:100px;
   }
   100% {
     top:0px;
   }
+
 }
