--- a/HTML-Templates/BasicCleanPage (Small footer Hidden)/styles/base.css
+++ b/HTML-Templates/BasicCleanPage (Small footer Hidden)/styles/base.css
@@ -57,6 +57,7 @@ button:focus {outline:0;}
   z-index:9999;
   color:rgb(52,58,64);
   display: block;
+  font-size:16px;
   -webkit-transform: translateY(30px);
   -ms-transform: translateY(30px);
   transform: translateY(30px);
