--- a/HTML-Templates/BasicCleanPage (Small footer)/styles/base.css
+++ b/HTML-Templates/BasicCleanPage (Small footer)/styles/base.css
@@ -52,6 +52,7 @@ button:focus {outline:0;}
   width:100%;
   height: 30px;
   bottom: 0px;
+  font-size: 16px;
   margin-left:20px;
   z-index:9999;
   color:rgb(52,58,64);
