--- a/HTML-Templates/BasicCleanPage (Small footer Hidden 60px reach)/styles/base.css
+++ b/HTML-Templates/BasicCleanPage (Small footer Hidden 60px reach)/styles/base.css
@@ -80,8 +80,14 @@ button:focus {outline:0;}
   font-weight: 300;
   vertical-align: text-top;
 }
-.footer a:hover{
-  color: RGB(26,29,32);
+.octicon-mark-github, .octicon-mail{
+  fill: RGB(52,58,64);
+  -webkit-transition: fill 0.3s;
+  -o-transition: fill 0.3s;
+  transition: fill 0.3s;
+}
+.octicon-mark-github:hover, .octicon-mail:hover{
+  fill: RGB(26,29,32);
 }
 .footer_fascade {
   position: absolute;
@@ -89,4 +95,8 @@ button:focus {outline:0;}
   width:100%;
   bottom:0px;
   z-index:9998
+}
+svg {
+  overflow: hidden;
+  vertical-align: middle;
 }
